# bayesian-active-learning

./: .gitignore  .gitlab-ci.yml  README.md  noxfile.py  pyproject.toml  setup.cfg
notebooks/: 00_weight_decay_tuning.ipynb  01_jax_testing.ipynb  01_standard_experiment.ipynb  02_reduced_batch_size.ipynb  03_modified_pool_set.ipynb  04_further_extensions.ipynb
src/: __init__.py  cli.py
src/bayesian_active_learning/: acquisition_functions.py  data_utils.py  experiment.py  losses.py  metrics.py  models.py  training.py  utils.py
tests/: test_version.py
