[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]

[tool.setuptools_scm]
fallback_version = "0.0.1+fallback"

[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.nox
  | build
  | dist
  | \.eggs
)/
'''

[tool.nbqa.addopts]
# use longer lines in notebooks
black = [
    "--line-length=88",
]
flake8 = [
    "--extend-ignore=E203, W503",
    "--max-line-length=88",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
# Options for pytest:
addopts = "--cov=bal --cov-report=term-missing --verbose"
norecursedirs = ["dependencies", "dist", "build", ".nox"]
testpaths = "tests"
