[metadata]
name = bal
description = bayesian_active_learning

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# Add dependencies of your project (semicolon/line-separated) here, e.g.
install_requires =
    click
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    bal = bal.cli:cli

[options.packages.find]
where = src
exclude =
    tests

[bdist_wheel]
universal = 1

[flake8]
ignore = E203 W503 W291 W293
exclude =
    .eggs
    .nox
    dist

[mypy]
ignore_missing_imports = True
